[workspace]
members = ["arzmq-sys"]
resolver = "3"

[workspace.package]
version = "0.5.5"
edition = "2024"
rust-version = "1.87"
authors = ["Markus 'ShiN0' Gaertner"]

[workspace.dependencies]
rustversion = { version = ">=1.0.6" }
arzmq-sys = { version = "0.5.5", path = "arzmq-sys" }

[workspace.lints.rust]
non_local_definitions = "allow"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

[profile.release]
strip = "symbols"
opt-level = "z"
lto = "fat"
codegen-units = 1

[package]
name = "arzmq"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
build = "build.rs"
autotests = true
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/mgaertne/arzmq"
documentation = "https://docs.rs/arzmq"
keywords = ["zmq", "zeromq", "bindings", "protocol"]
categories = ["api-bindings", "network-programming"]
description = "High-level bindings to the zeromq library"

[badges]
maintenance = { status = "actively-maintained" }

[lib]
crate-type = ["lib", "staticlib", "dylib"]
test = true
harness = true
doctest = true
doc = true
doc-scrape-examples = true

[dependencies]
rustversion = { workspace = true }
arzmq-sys = { workspace = true }

num-traits = { version = ">=0.2", default-features = false }
bitflags = { version = ">=2.9", default-features = false }
derive_more = { version = ">=2.0", default-features = false, features = ["from", "debug", "display", "deref"]}
thiserror = { version = ">=2.0", default-features = false }
parking_lot = { version = ">=0.12", default-features = false, features = ["arc_lock"] }

derive_builder = { version = ">=0.20", default-features = false, features = ["alloc"], optional = true }
serde = { version = ">=1.0", default-features = false, optional = true, features = ["derive", "alloc"] }
async-trait = { version = ">=0.1.9", default-features = false, optional = true }
futures = { version = ">=0.3", default-features = false, features = ["async-await", "alloc"], optional = true}

# for async examples
tokio = { version = ">=1.47", default-features = false, features = ["macros", "rt", "rt-multi-thread", "time", "net", "io-util"], optional = true }
async-std = { version = ">=1.13", default-features = false, features = ["attributes", "default"], optional = true }

[build-dependencies]
rustversion = { workspace = true }
arzmq-sys = { workspace = true }

[dev-dependencies]
rstest = { version = ">=0.26", default-features = false}
futures = { version = ">=0.3", features = ["executor"] }

[features]
default = ["builder"]
# enable Builder API for the various socket types and the ZMQ context.
builder = ["dep:serde", "dep:derive_builder"]
# enable async futures for send and receive operations
futures = ["dep:async-trait", "dep:futures"]
# enables Draft API features in the underlying libzmq.
draft-api = ["arzmq-sys/draft-api"]

# enables CURVE authorization through libsodium
curve = ["arzmq-sys/curve"]
# enables GSS-API (Kerbereos V) authoriazazion
gssapi = ["arzmq-sys/gssapi"]
# enables PGM transportation capability if available on the system.
pgm = ["arzmq-sys/pgm"]
# enables NORM transportation capability if available on the system.
norm = ["draft-api", "arzmq-sys/norm"]
# enables the VMCI transportation capability
vmci = ["arzmq-sys/vmci"]

examples-tokio = ["futures", "dep:tokio"]
examples-async-std = ["futures", "dep:async-std"]
examples-futures = ["futures", "futures/executor", "futures/thread-pool"]
examples-draft-api = ["draft-api", "arzmq-sys/draft-api"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[[bin]]
name = "curve_keygen"
path = "bin/curve_keygen.rs"
required-features = ["curve"]

[[bin]]
name = "curve_public"
path = "bin/curve_public.rs"
required-features = ["curve"]

[[example]]
name = "version"
path = "examples/version.rs"

[[example]]
name = "push_pull"
path = "examples/push_pull.rs"

[[example]]
name = "publish_subscribe"
path = "examples/publish_subscribe.rs"

[[example]]
name = "publish_xsubscribe"
path = "examples/publish_xsubscribe.rs"

[[example]]
name = "xpublish_subscribe"
path = "examples/xpublish_subscribe.rs"

[[example]]
name = "xpublish_xsubscribe"
path = "examples/xpublish_xsubscribe.rs"

[[example]]
name = "request_reply"
path = "examples/request_reply.rs"

[[example]]
name = "request_router"
path = "examples/request_router.rs"

[[example]]
name = "dealer_reply"
path = "examples/dealer_reply.rs"

[[example]]
name = "dealer_router"
path = "examples/dealer_router.rs"

[[example]]
name = "dealer_dealer"
path = "examples/dealer_dealer.rs"

[[example]]
name = "stream_client"
path = "examples/stream_client.rs"

[[example]]
name = "stream_server"
path = "examples/stream_server.rs"

[[example]]
name = "pair_pair"
path = "examples/pair_pair.rs"

[[example]]
name = "channel_channel"
path = "examples/channel_channel.rs"
required-features = ["examples-draft-api"]

[[example]]
name = "scatter_gather"
path = "examples/scatter_gather.rs"
required-features = ["examples-draft-api"]

[[example]]
name = "radio_dish"
path = "examples/radio_dish.rs"
required-features = ["examples-draft-api"]

[[example]]
name = "client_server"
path = "examples/client_server.rs"
required-features = ["examples-draft-api"]

[[example]]
name = "peer_peer"
path = "examples/peer_peer.rs"
required-features = ["examples-draft-api"]

[[example]]
name = "publish_subscribe_async_tokio"
path = "examples/publish_subscribe_async_tokio.rs"
required-features = ["examples-tokio"]

[[example]]
name = "request_reply_async_tokio"
path = "examples/request_reply_async_tokio.rs"
required-features = ["examples-tokio"]

[[example]]
name = "dealer_reply_async_tokio"
path = "examples/dealer_reply_async_tokio.rs"
required-features = ["examples-tokio"]

[[example]]
name = "request_router_async_tokio"
path = "examples/request_router_async_tokio.rs"
required-features = ["examples-tokio"]

[[example]]
name = "dealer_dealer_async_tokio"
path = "examples/dealer_dealer_async_tokio.rs"
required-features = ["examples-tokio"]

[[example]]
name = "dealer_router_async_tokio"
path = "examples/dealer_router_async_tokio.rs"
required-features = ["examples-tokio"]

[[example]]
name = "publish_xsubscribe_async_tokio"
path = "examples/publish_xsubscribe_async_tokio.rs"
required-features = ["examples-tokio"]

[[example]]
name = "xpublish_subscribe_async_tokio"
path = "examples/xpublish_subscribe_async_tokio.rs"
required-features = ["examples-tokio"]

[[example]]
name = "xpublish_xsubscribe_async_tokio"
path = "examples/xpublish_xsubscribe_async_tokio.rs"
required-features = ["examples-tokio"]

[[example]]
name = "push_pull_async_tokio"
path = "examples/push_pull_async_tokio.rs"
required-features = ["examples-tokio"]

[[example]]
name = "pair_pair_async_tokio"
path = "examples/pair_pair_async_tokio.rs"
required-features = ["examples-tokio"]

[[example]]
name = "stream_client_async_tokio"
path = "examples/stream_client_async_tokio.rs"
required-features = ["examples-tokio"]

[[example]]
name = "stream_server_async_tokio"
path = "examples/stream_server_async_tokio.rs"
required-features = ["examples-tokio"]

[[example]]
name = "peer_peer_async_tokio"
path = "examples/peer_peer_async_tokio.rs"
required-features = ["examples-tokio", "draft-api"]

[[example]]
name = "channel_channel_async_tokio"
path = "examples/channel_channel_async_tokio.rs"
required-features = ["examples-tokio", "draft-api"]

[[example]]
name = "client_server_async_tokio"
path = "examples/client_server_async_tokio.rs"
required-features = ["examples-tokio", "draft-api"]

[[example]]
name = "scatter_gather_async_tokio"
path = "examples/scatter_gather_async_tokio.rs"
required-features = ["examples-tokio", "draft-api"]

[[example]]
name = "radio_dish_async_tokio"
path = "examples/radio_dish_async_tokio.rs"
required-features = ["examples-tokio", "draft-api"]

[[example]]
name = "publish_subscribe_async_async_std"
path = "examples/publish_subscribe_async_async_std.rs"
required-features = ["examples-async-std"]

[[example]]
name = "request_reply_async_async_std"
path = "examples/request_reply_async_async_std.rs"
required-features = ["examples-async-std"]

[[example]]
name = "dealer_reply_async_async_std"
path = "examples/dealer_reply_async_async_std.rs"
required-features = ["examples-async-std"]

[[example]]
name = "request_router_async_async_std"
path = "examples/request_router_async_async_std.rs"
required-features = ["examples-async-std"]

[[example]]
name = "dealer_dealer_async_async_std"
path = "examples/dealer_dealer_async_async_std.rs"
required-features = ["examples-async-std"]

[[example]]
name = "dealer_router_async_async_std"
path = "examples/dealer_router_async_async_std.rs"
required-features = ["examples-async-std"]

[[example]]
name = "publish_xsubscribe_async_async_std"
path = "examples/publish_xsubscribe_async_async_std.rs"
required-features = ["examples-async-std"]

[[example]]
name = "xpublish_subscribe_async_async_std"
path = "examples/xpublish_subscribe_async_async_std.rs"
required-features = ["examples-async-std"]

[[example]]
name = "xpublish_xsubscribe_async_async_std"
path = "examples/xpublish_xsubscribe_async_async_std.rs"
required-features = ["examples-async-std"]

[[example]]
name = "push_pull_async_async_std"
path = "examples/push_pull_async_async_std.rs"
required-features = ["examples-async-std"]

[[example]]
name = "pair_pair_async_async_std"
path = "examples/pair_pair_async_async_std.rs"
required-features = ["examples-async-std"]

[[example]]
name = "stream_client_async_async_std"
path = "examples/stream_client_async_async_std.rs"
required-features = ["examples-async-std"]

[[example]]
name = "stream_server_async_async_std"
path = "examples/stream_server_async_async_std.rs"
required-features = ["examples-async-std"]

[[example]]
name = "peer_peer_async_async_std"
path = "examples/peer_peer_async_async_std.rs"
required-features = ["examples-async-std", "draft-api"]

[[example]]
name = "channel_channel_async_async_std"
path = "examples/channel_channel_async_async_std.rs"
required-features = ["examples-async-std", "draft-api"]

[[example]]
name = "client_server_async_async_std"
path = "examples/client_server_async_async_std.rs"
required-features = ["examples-async-std", "draft-api"]

[[example]]
name = "scatter_gather_async_async_std"
path = "examples/scatter_gather_async_async_std.rs"
required-features = ["examples-async-std", "draft-api"]

[[example]]
name = "radio_dish_async_async_std"
path = "examples/radio_dish_async_async_std.rs"
required-features = ["examples-async-std", "draft-api"]

[[example]]
name = "publish_subscribe_async_futures"
path = "examples/publish_subscribe_async_futures.rs"
required-features = ["examples-futures"]

[[example]]
name = "request_reply_async_futures"
path = "examples/request_reply_async_futures.rs"
required-features = ["examples-futures"]

[[example]]
name = "dealer_reply_async_futures"
path = "examples/dealer_reply_async_futures.rs"
required-features = ["examples-futures"]

[[example]]
name = "request_router_async_futures"
path = "examples/request_router_async_futures.rs"
required-features = ["examples-futures"]

[[example]]
name = "dealer_dealer_async_futures"
path = "examples/dealer_dealer_async_futures.rs"
required-features = ["examples-futures"]

[[example]]
name = "dealer_router_async_futures"
path = "examples/dealer_router_async_futures.rs"
required-features = ["examples-futures"]

[[example]]
name = "publish_xsubscribe_async_futures"
path = "examples/publish_xsubscribe_async_futures.rs"
required-features = ["examples-futures"]

[[example]]
name = "xpublish_subscribe_async_futures"
path = "examples/xpublish_subscribe_async_futures.rs"
required-features = ["examples-futures"]

[[example]]
name = "xpublish_xsubscribe_async_futures"
path = "examples/xpublish_xsubscribe_async_futures.rs"
required-features = ["examples-futures"]

[[example]]
name = "push_pull_async_futures"
path = "examples/push_pull_async_futures.rs"
required-features = ["examples-futures"]

[[example]]
name = "pair_pair_async_futures"
path = "examples/pair_pair_async_futures.rs"
required-features = ["examples-futures"]

[[example]]
name = "stream_client_async_futures"
path = "examples/stream_client_async_futures.rs"
required-features = ["examples-futures"]

[[example]]
name = "stream_server_async_futures"
path = "examples/stream_server_async_futures.rs"
required-features = ["examples-futures"]

[[example]]
name = "peer_peer_async_futures"
path = "examples/peer_peer_async_futures.rs"
required-features = ["examples-futures", "draft-api"]

[[example]]
name = "channel_channel_async_futures"
path = "examples/channel_channel_async_futures.rs"
required-features = ["examples-futures", "draft-api"]

[[example]]
name = "client_server_async_futures"
path = "examples/client_server_async_futures.rs"
required-features = ["examples-futures", "draft-api"]

[[example]]
name = "scatter_gather_async_futures"
path = "examples/scatter_gather_async_futures.rs"
required-features = ["examples-futures", "draft-api"]

[[example]]
name = "radio_dish_async_futures"
path = "examples/radio_dish_async_futures.rs"
required-features = ["examples-futures", "draft-api"]
