[package]
name = "arzmq-sys"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
build = "build.rs"
autotests = false
autobins = false
autoexamples = false
autobenches = false
license = "MIT OR Apache-2.0"
repository = "https://github.com/mgaertne/arzmq"
keywords = ["zmq", "zeromq", "bindings", "ffi"]
categories = ["external-ffi-bindings"]
description = "Low-level bindings to the zeromq library"

[lib]
test = false
doc = false
doctest = false
bench = false

[features]
default = []
draft-api = []
curve = []
gssapi = []
pgm = []
norm = []
vmci = []

[build-dependencies]
cmake = { version = "0.1.54" }
bindgen = { version = "0.72" }
system-deps = { version = "7.0.5" }

[target."cfg(unix)".dependencies]
libc = { version = "1.0.0-alpha.1", default-features = false }

[target."cfg(windows)".build-dependencies]
walkdir = { version = "2.5" }

[package.metadata.system-deps]
gnutls = { version = ">=3", optional = true }
libsodium = { version = ">=1.0", feature = "curve" }
mit-krb5-gssapi = { version = ">=0.1", feature = "gssapi", fallback-names = ["gssapi_krb5", "krb5-gssapi"] }
openpgm = { name = "openpgm-5.2", version = ">=5.2", feature = "pgm", fallback-names = ["openpgm-5.3"] }
norm = { version = ">=1.0", feature = "norm" }
