[package]
name = "arzmq-sys"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
build = "build.rs"
autotests = false
autobins = false
autoexamples = false
autobenches = false
links = "zmq"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mgaertne/arzmq"
keywords = ["zmq", "zeromq", "bindings", "ffi"]
categories = ["external-ffi-bindings"]
description = "Low-level bindings to the zeromq library"

[lib]
test = false
doc = false
doctest = false
bench = false

[features]
default = []
draft-api = []
curve = []
gssapi = []
pgm = []
norm = ["draft-api"]
vmci = []

[build-dependencies]
cc = { version = "1.2.31", features = ["parallel"] }
dircpy = { version = "0.3.19" }
tempfile = { version = "3.20" }
bindgen = { version = "0.72" }
system-deps = { version = "7.0.5" }
reqwest = { version = "0.12.22", default-features = false, features = ["blocking", "default-tls"] }
tap = { version = "1.0.1" }

[target."cfg(unix)".dependencies]
libc = { version = "1.0.0-alpha.1", default-features = false }

[target.'cfg(target_env = "msvc")'.build-dependencies]
walkdir = { version = "2.5" }
vcpkg = { version = "0.2.15" }

[package.metadata.system-deps]
gnutls = { version = ">=3", optional = true }
libsodium = { version = ">=1.0", feature = "curve", optional = true }
gssapi = { name = "mit-krb5-gssapi", version = ">=0.1", feature = "gssapi", fallback-names = ["gssapi_krb5", "krb5-gssapi", "Kerberos"], optional = true }
openpgm = { name = "openpgm-5.1", version = ">=5.1", feature = "pgm", fallback-names = ["openpgm-5.2", "openpgm-5.3"], optional = true }
norm = { version = ">=1.0", feature = "norm", optional = true }
