[package]
name = "arzmq-sys"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
build = "build.rs"
autotests = false
autobins = false
autoexamples = false
autobenches = false
links = "zmq"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mgaertne/arzmq"
keywords = ["zmq", "zeromq", "bindings", "ffi"]
categories = ["external-ffi-bindings"]
description = "Low-level bindings to the zeromq library"

[lib]
test = false
doc = false
doctest = false
bench = false

[features]
default = []
draft-api = []
curve = []
gssapi = []
pgm = []
norm = ["draft-api"]
vmci = []

[build-dependencies]
tap = { version = ">=1.0" }
cc = { version = ">=1.2", features = ["parallel"] }
dircpy = { version = ">=0.3" }
tempfile = { version = ">=3.22" }
bindgen = { version = ">=0.72" }
system-deps = { version = ">=7.0" }
walkdir = { version = ">=2.5" }
cmake = { version = ">=0.1" }

[target."cfg(unix)".dependencies]
libc = { version = ">=1.0.0-alpha.1", default-features = false }

[target.'cfg(not(target_env = "msvc"))'.build-dependencies]
autotools = { version = ">=0.2" }

[target.'cfg(target_env = "msvc")'.build-dependencies]
vcpkg = { version = ">=0.2" }

[package.metadata.system-deps]
gnutls = { version = ">=3", optional = true }
libsodium = { version = ">=1.0", feature = "curve", optional = true }
gssapi = { name = "mit-krb5-gssapi", version = ">=0.1", feature = "gssapi", fallback-names = ["gssapi_krb5", "krb5-gssapi", "Kerberos"], optional = true }
